Ajout de la galerie HTML

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     // ⚙️ Modifie ici ton repo GitHub
     const user = "hdaviot95-blip";
-    const repo = "png-gallery";
+    const repo = "sp500-charts";
     const apiUrl = `https://api.github.com/repos/${user}/${repo}/contents/`;
 
     fetch(apiUrl)
